@@ -1,9 +1,10 @@
 lilv (0.24.7) unstable;
 
-  * Implement state:freePath feature
+  * Fix cases where incorrect translation is used
   * Fix deleting state bundles loaded from the model
+  * Implement state:freePath feature
 
- -- David Robillard <d@drobilla.net>  Sat, 18 Jan 2020 14:28:23 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 18 Jan 2020 16:10:28 +0000
 
 lilv (0.24.6) stable;
 
